==> lyusupov/SoftRF/software/firmware/source/SkyWatch/Platform_ESP32.cpp <==
#include "sdkconfig.h"
#include <SPI.h>
#include <esp_err.h>
#include <esp_wifi.h>
#include <soc/rtc_cntl_reg.h>
#include <rom/spi_flash.h>
#include <soc/adc_channel.h>
#include <flashchips.h>
#include <axp20x.h>
#include "SoCHelper.h"
#include "EEPROMHelper.h"
#include "WiFiHelper.h"
#include "BluetoothHelper.h"
#include "BatteryHelper.h"
#include "TFTHelper.h"
#include "GNSSHelper.h"
#include <battery.h>
#include <sqlite3.h>
#include <SD.h>
#include <esp_wifi.h>
#include <esp_bt.h>
#define uS_TO_S_FACTOR 1000000  /* Conversion factor for micro seconds to seconds */
#define TIME_TO_SLEEP  28        /* Time ESP32 will go to sleep (in seconds) */

static void ESP32_post_init()
{
  const char *str1 = "NO";
  const char *str2 = "DEVICE";

  switch (hw_info.display)
  {
  case DISPLAY_TFT_TTGO_135:
    if (has_usb_client) {
      str2 = SoftRF_text2;

      switch (hw_info.slave)
      {
      case SOFTRF_MODEL_STANDALONE:
        str1 = SoftRF_text3;
        break;
      case SOFTRF_MODEL_PRIME_MK2:
        str1 = SoftRF_text4;
        break;
      case SOFTRF_MODEL_DONGLE:
        str1 = SoftRF_text5;
        break;
      case SOFTRF_MODEL_BADGE:
        str1 = SoftRF_text6;
        break;
      case SOFTRF_MODEL_ACADEMY:
        str1 = SoftRF_text7;
        break;
      case SOFTRF_MODEL_ES:
        str1 = SoftRF_text8;
        break;
      case SOFTRF_MODEL_LEGO:
        str1 = SoftRF_text9;
        break;
      case SOFTRF_MODEL_PRIME_MK3:
        str1 = SoftRF_text10;
        break;
      case SOFTRF_MODEL_BALKAN:
        str1 = SoftRF_text11;
        break;
      default:
        str1 = "Unknown";
        break;
      }
    }

    TFT_Message(str1, str2);
    delay(3000);

    break;
  case DISPLAY_NONE:
  default:
    break;
  }
}

static void ESP32_fini()
{
  uSD_SPI.end();

  esp_wifi_stop();

#if !defined(CONFIG_IDF_TARGET_ESP32S2)
  esp_bt_controller_disable();
#endif /* CONFIG_IDF_TARGET_ESP32S2 */

  if (hw_info.model == SOFTRF_MODEL_SKYWATCH) {

    axp.setChgLEDMode(AXP20X_LED_OFF);

    axp.setPowerOutPut(AXP202_LDO2, AXP202_OFF); // BL
#if !defined(EB_S76G_1_3)
    axp.setPowerOutPut(AXP202_LDO4, AXP202_OFF); // S76G (Sony GNSS)
#endif
    axp.setPowerOutPut(AXP202_LDO3, AXP202_OFF); // S76G (MCU + LoRa)

    delay(20);

    esp_sleep_enable_ext0_wakeup((gpio_num_t) SOC_GPIO_PIN_TWATCH_PMU_IRQ, 0); // 1 = High, 0 = Low
  }

//  Serial.println("Going to sleep now");
//  Serial.flush();

  esp_deep_sleep_start();
}

static void ESP32_sleep_ms(int ms)
{
  esp_sleep_enable_timer_wakeup(ms * 1000);
  esp_sleep_pd_config(ESP_PD_DOMAIN_RTC_PERIPH,ESP_PD_OPTION_ON);
  esp_light_sleep_start();
}

static uint32_t ESP32_getChipId()
{
  return (uint32_t) efuse_mac[5]        | (efuse_mac[4] << 8) | \
                   (efuse_mac[3] << 16) | (efuse_mac[2] << 24);
}

static void ESP32_WiFi_set_param(int ndx, int value)
{
  uint32_t lt = value * 60; /* in minutes */

  switch (ndx)
  {
  case WIFI_PARAM_TX_POWER:
    if (value > 20) {
      value = 20; /* dBm */
    }

    if (value < 0) {
      value = 0; /* dBm */
    }

    ESP_ERROR_CHECK(esp_wifi_set_max_tx_power(ESP32_dBm_to_power_level[value]));
    break;
  case WIFI_PARAM_DHCP_LEASE_TIME:
    tcpip_adapter_dhcps_option(
      (tcpip_adapter_dhcp_option_mode_t) TCPIP_ADAPTER_OP_SET,
      (tcpip_adapter_dhcp_option_id_t)   TCPIP_ADAPTER_IP_ADDRESS_LEASE_TIME,
      (void*) &lt, sizeof(lt));
    break;
  default:
    break;
  }
}

static bool ESP32_WiFi_hostname(String aHostname)
{
  return WiFi.setHostname(aHostname.c_str());
}

static void ESP32_WiFi_transmit_UDP(int port, byte *buf, size_t size)
{
  IPAddress ClientIP;
  WiFiMode_t mode = WiFi.getMode();
  int i = 0;

  switch (mode)
  {
  case WIFI_STA:
    ClientIP = ESP32_WiFi_get_broadcast();

    Uni_Udp.beginPacket(ClientIP, port);
    Uni_Udp.write(buf, size);
    Uni_Udp.endPacket();

    break;
  case WIFI_AP:
    wifi_sta_list_t stations;
    ESP_ERROR_CHECK(esp_wifi_ap_get_sta_list(&stations));

    tcpip_adapter_sta_list_t infoList;
    ESP_ERROR_CHECK(tcpip_adapter_get_sta_list(&stations, &infoList));

    while(i < infoList.num) {
      ClientIP = infoList.sta[i++].ip.addr;

      Uni_Udp.beginPacket(ClientIP, port);
      Uni_Udp.write(buf, size);
      Uni_Udp.endPacket();
    }
    break;
  case WIFI_OFF:
  default:
    break;
  }
}

static int ESP32_WiFi_clients_count()
{
  WiFiMode_t mode = WiFi.getMode();

  switch (mode)
  {
  case WIFI_AP:
    wifi_sta_list_t stations;
    ESP_ERROR_CHECK(esp_wifi_ap_get_sta_list(&stations));

    tcpip_adapter_sta_list_t infoList;
    ESP_ERROR_CHECK(tcpip_adapter_get_sta_list(&stations, &infoList));

    return infoList.num;
  case WIFI_STA:
  default:
    return -1; /* error */
  }
}

static void ESP32_Battery_setup()
{
  if (hw_info.model == SOFTRF_MODEL_SKYWATCH) {

    /* T-Beam v08 and T-Watch have PMU */

    /* TBD */

  } else if (hw_info.model == SOFTRF_MODEL_WEBTOP_USB) {
#if defined(CONFIG_IDF_TARGET_ESP32S2)
    calibrate_voltage(ADC1_GPIO9_CHANNEL);
#endif /* CONFIG_IDF_TARGET_ESP32S2 */
  } else if (hw_info.model == SOFTRF_MODEL_WEBTOP_SERIAL) {
#if defined(CONFIG_IDF_TARGET_ESP32S3)
    calibrate_voltage(ADC1_GPIO2_CHANNEL);
#endif /* CONFIG_IDF_TARGET_ESP32S3 */
  }
}

static float ESP32_Battery_voltage()
{
  float voltage = 0.0;

  if (hw_info.model == SOFTRF_MODEL_SKYWATCH) {

    /* T-Beam v08 and T-Watch have PMU */
    if (axp.isBatteryConnect()) {
      voltage = axp.getBattVoltage();
    }
  }

  return (voltage * 0.001);
}

static void ESP32_WDT_setup()
{
  enableLoopWDT();
}

static void ESP32_WDT_fini()
{
  disableLoopWDT();
}

static void ESP32S2_USB_setup()
{
  USB_RX_FIFO = new cbuf(USB_RX_FIFO_SIZE);
  USB_TX_FIFO = new cbuf(USB_TX_FIFO_SIZE);

  host.registerClientCb(client_event_callback);
  host.init();

  delay(2000);
}

static void ESP32S2_USB_loop()
{
    if (device && device->isConnected())
    {
          uint8_t chunk[USB_MAX_WRITE_CHUNK_SIZE];
          size_t size = (USB_TX_FIFO->available() < USB_MAX_WRITE_CHUNK_SIZE ?
                         USB_TX_FIFO->available() : USB_MAX_WRITE_CHUNK_SIZE);

          USB_TX_FIFO->read((char *) chunk, size);
          device->OUTDATA(chunk, size);
    }
}

static void ESP32S2_USB_setup()
{

}

static void ESP32S2_USB_loop()
{

}
