==> lyusupov/SoftRF/software/firmware/source/SkyWatch/Platform_RP2040.cpp <==
#include "SoCHelper.h"
#include "EEPROMHelper.h"
#include "WiFiHelper.h"
#include "BluetoothHelper.h"
#include "SkyWatch.h"
#include <hardware/watchdog.h>
#include <Adafruit_SleepyDog.h>
#include "pico/unique_id.h"
#define PICO_ON_DEVICE 1
#include "pico/binary_info.h"
#include "hardware/flash.h"
#include <pico_sleep.h>
#include "pio_usb.h"
#include "Adafruit_TinyUSB.h"
#define SOFTRF_DESC "Multifunctional, compatible DIY general aviation proximity awareness system"
#define SOFTRF_URL  "https://github.com/lyusupov/SoftRF"
#define UniqueIDsize                   2

static void RP2040_post_init()
{
  core0_booting = false;
}

static void RP2040_fini()
{
#if 0 /* TBD */
  // back from dormant state
  rosc_enable();
  clocks_init();

  rp2040.restart();
#endif
}

static void RP2040_sleep_ms(int ms)
{
  sleep_ms(ms);
}

static uint32_t RP2040_getChipId()
{
  return __builtin_bswap32(RP2040_chip_id[UniqueIDsize - 1]);
}

static void RP2040_WiFi_set_param(int ndx, int value)
{
#if !defined(EXCLUDE_WIFI)
  switch (ndx)
  {
  case WIFI_PARAM_TX_POWER:
    switch (value)
    {
    case WIFI_TX_POWER_MAX:
      WiFi.noLowPowerMode();
      break;
    case WIFI_TX_POWER_MIN:
      WiFi.aggressiveLowPowerMode();
      break;
    case WIFI_TX_POWER_MED:
    default:
      WiFi.defaultLowPowerMode();
      break;
    }
    break;
  case WIFI_PARAM_DHCP_LEASE_TIME:
    if (WiFi.getMode() == WIFI_AP) {
      /* RP2040 Wi-Fi default lease time is 24 hours */
    }
    break;
  default:
    break;
  }
#endif /* EXCLUDE_WIFI */
}

static bool RP2040_WiFi_hostname(String aHostname)
{
  bool rval = false;
#if !defined(EXCLUDE_WIFI)
  if (RP2040_board == RP2040_RPIPICO_W) {
    WiFi.hostname(aHostname.c_str());
    rval = true;
  }
#endif /* EXCLUDE_WIFI */
  return rval;
}

static void RP2040_WiFi_transmit_UDP(int port, byte *buf, size_t size)
{
#if !defined(EXCLUDE_WIFI)
  union rp2040_ip ipv4;
  IPAddress ClientIP;
  ipv4.addr       = (uint32_t) WiFi.localIP();
  WiFiMode_t mode = WiFi.getMode();

  switch (mode)
  {
  case WIFI_STA:
    ClientIP = IPAddress(ipv4.addr | ~((uint32_t) WiFi.subnetMask()));

    Uni_Udp.beginPacket(ClientIP, port);
    Uni_Udp.write(buf, size);
    Uni_Udp.endPacket();

    break;
  case WIFI_AP:
    if (WiFi.softAPgetStationNum() > 0) {
      for (int i=0; i<4; i++) {
        ClientIP = IPAddress(ipv4.bytes[0], ipv4.bytes[1], ipv4.bytes[2],
                             DHCPS_BASE_IP + i);
        Uni_Udp.beginPacket(ClientIP, port);
        Uni_Udp.write(buf, size);
        Uni_Udp.endPacket();
      }
    }
    break;
  case WIFI_OFF:
  default:
    break;
  }
#endif /* EXCLUDE_WIFI */
}

static int RP2040_WiFi_clients_count()
{
#if !defined(EXCLUDE_WIFI)
  struct station_info *stat_info;
  int clients = 0;
  WiFiMode_t mode = WiFi.getMode();

  switch (mode)
  {
  case WIFI_AP:
    return WiFi.softAPgetStationNum();
  case WIFI_STA:
  default:
    return -1; /* error */
  }
#else
  return -1;
#endif /* EXCLUDE_WIFI */
}

static void RP2040_Battery_setup()
{
#if SOC_GPIO_PIN_BATTERY != SOC_UNUSED_PIN
  analogReadResolution(12);
  analogRead(SOC_GPIO_PIN_BATTERY);
#endif
}

static float RP2040_Battery_voltage()
{
  uint16_t mV = 0;

#if SOC_GPIO_PIN_BATTERY != SOC_UNUSED_PIN
  enum gpio_function pin25_func;
  enum gpio_function pin29_func;
  uint pin25_dir;
  uint pin29_dir;

  if (RP2040_board == RP2040_RPIPICO_W) {
    pin29_dir  = gpio_get_dir(SOC_GPIO_PIN_BATTERY);
    pin29_func = gpio_get_function(SOC_GPIO_PIN_BATTERY);
    adc_gpio_init(SOC_GPIO_PIN_BATTERY);

    pin25_dir  = gpio_get_dir(SOC_GPIO_PIN_CYW43_EN);
    pin25_func = gpio_get_function(SOC_GPIO_PIN_CYW43_EN);
    pinMode(SOC_GPIO_PIN_CYW43_EN, OUTPUT);
    digitalWrite(SOC_GPIO_PIN_CYW43_EN, HIGH);
  }

  mV = (analogRead(SOC_GPIO_PIN_BATTERY) * 3300UL) >> 12;

  if (RP2040_board == RP2040_RPIPICO_W) {
    gpio_set_function(SOC_GPIO_PIN_CYW43_EN, pin25_func);
    gpio_set_dir(SOC_GPIO_PIN_CYW43_EN, pin25_dir);
    gpio_set_function(SOC_GPIO_PIN_BATTERY,  pin29_func);
    gpio_set_dir(SOC_GPIO_PIN_BATTERY,  pin29_dir);
  }
#endif
  return (mV * SOC_ADC_VOLTAGE_DIV / 1000.0);
}

static void RP2040_WDT_setup()
{
#if !defined(ARDUINO_ARCH_MBED)
  Watchdog.enable(4000);
#endif /* ARDUINO_ARCH_MBED */
  wdt_is_active = true;
}

static void RP2040_WDT_fini()
{
  if (wdt_is_active) {
#if !defined(ARDUINO_ARCH_MBED)
    hw_clear_bits(&watchdog_hw->ctrl, WATCHDOG_CTRL_ENABLE_BITS);
#endif /* ARDUINO_ARCH_MBED */
    wdt_is_active = false;
  }
}

static void RP2040_USB_setup()
{
#if defined(USE_USB_HOST)
  /* TBD */
#elif !defined(ARDUINO_ARCH_MBED)
  if (USBSerial && USBSerial != Serial) {
    USBSerial.begin(SERIAL_OUT_BR);
  }
#endif /* ARDUINO_ARCH_MBED */
}

static void RP2040_USB_loop()
{
#if defined(USE_USB_HOST)
  uint8_t buf[USBD_CDC_IN_OUT_MAX_SIZE];
  size_t size;

  while (SerialHost             &&
         SerialHost.connected() &&
         (size = SerialHost.availableForWrite()) > 0) {
    size_t avail = USB_TX_FIFO.available();

    if (avail == 0) {
      break;
    }

    if (size > avail) {
      size = avail;
    }

    if (size > sizeof(buf)) {
      size = sizeof(buf);
    }

    for (size_t i=0; i < size; i++) {
      buf[i] = USB_TX_FIFO.read_char();
    }

    if (SerialHost && SerialHost.connected()) {
      SerialHost.write(buf, size);
    }
  }

  if ( SerialHost             &&
       SerialHost.connected() &&
       (size = USB_RX_FIFO.availableForStore()) > 0 ) {
    if (size > sizeof(buf)) {
      size = sizeof(buf);
    }
    size_t avail = SerialHost.available();
    if (size > avail) {
      size = avail;
    }

    size_t count = SerialHost.read(buf, size);
//    Serial.write(buf, count);
    for (size_t i=0; i < count; i++) {
      if (!USB_RX_FIFO.isFull()) {
        USB_RX_FIFO.store_char(buf[i]);
      }
    }
  }
#elif !defined(USE_TINYUSB)
  uint8_t buf[USBD_CDC_IN_OUT_MAX_SIZE];
  size_t size;

  while (USBSerial && (size = USBSerial.availableForWrite()) > 0) {
    size_t avail = USB_TX_FIFO.available();

    if (avail == 0) {
      break;
    }

    if (size > avail) {
      size = avail;
    }

    if (size > sizeof(buf)) {
      size = sizeof(buf);
    }

    for (size_t i=0; i < size; i++) {
      buf[i] = USB_TX_FIFO.read_char();
    }

    if (USBSerial) {
      USBSerial.write(buf, size);
    }
  }

  while (USBSerial && USBSerial.available() > 0) {
    if (!USB_RX_FIFO.isFull()) {
      USB_RX_FIFO.store_char(USBSerial.read());
    } else {
      break;
    }
  }
#endif /* USE_TINYUSB */
}
